style.css
#heading{
text-align	:center;
border-radius			:10px ;
color			:blue;
background-color	:lightblue;
height			:300px;
margin :30px;
margin-bottom: 300px;

}
#upmenu{
position: fixed;
top:0;
left:0;
z-index : 600;
width:100%;
height: 50px;
background-color:bisque;

}
#upmenu a{
    float:right;

    display: block;
    width:7%;
    height:33px;
    font-weight: 800;
    color:cornflowerblue;
    text-align:center;
    text-decoration: none;
    padding: 3px;
    border:2px solid rgb(0, 225, 255);
    border-radius: 20px;
    margin:9px;
    top:-70px;
    position:relative;
}
#upmenu a:hover{
    background-color: rgb(232, 255, 196);
    padding: 4px;
    height: 35px;
  
   

}
 #upmenu .cl{
    color:rgba(144, 43, 226, 0.322);
    display:block;
     border: 2px solid #ff2fa82a;  
     width:10%;
     height:43px;
     margin-top :2px;
     font-size:medium;
     font-weight: 400;
     font-family: cursive;
     

}
.cl p{
    text-align: end;
    color :brown;
}


.hd{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: 200;
    font-style: oblique;
}


#bottom{
border			:5px solid black;
color			:blue;
background-color	:lightblue;
height			:400px;
margin: 10px;
margin-top: 300px;


}
#broom{
text-align: center;
padding: 40px;
border: 3px solid greenyellow;
border-radius: 130px;
width:90%;

}
.pic{
    width       :100%;
    height      :100% ;
    border      :2px solid blueviolet;
    background-color: rgb(255, 123, 0);
}
#body_all{
    border : 80px solid rgb(43, 226, 186);
    background-color: aquamarine;
    border-radius: 10px;
}
#bottom h3{
    text-align:center;

    
}
#bottom{

    
    text-align: center;
    border: 8px solid yellowgreen;
    border-radius: 10px;
    height: 900px;
    gap:500px;
    
    
}
.hh3{
    border: 3px solid yellowgreen;
    border-radius: 7px;
    width:40%;
    display:inline-block;
    padding:5px 10px;

}

.pic{
    border:3px solid greenyellow;
    border-radius:50px;
}
#off1{
    width:100%;
    overflow:auto;
    height:400px;
    justify-content: center;
    gap:30px;
}
#off1, #off2{
    float:left;
    width: 30%;
    margin:2%;
    border:2px solid yellowgreen;
    box-sizing:border-box;
    padding: 15px;
    border-radius: 7px;
    height: 300px;
    

}

#off1 h4, #off2 h3{
    text-align: center;
    margin-bottom: 10px;
}

